k8s/base/web-client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-client
  namespace: shift-manager
spec:
  selector:
    matchLabels:
      app: web-client
  replicas: 1
  template:
    metadata:
      labels:
        app: web-client
    spec:
      containers:
      - name: web-client
        image: shift-manager-web:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "256Mi"
            cpu: "300m"
          requests:
            memory: "128Mi"
            cpu: "100m"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
