k8s/base/web-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-client
  namespace: shift-manager
spec:
  selector:
    app: web-client
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
